project part 2 - liad css

--- a/css/Business account css.css
+++ b/css/Business account css.css
@@ -17,7 +17,13 @@
     margin: 1px;
   }
 
-  
+  .addButton{
+    grid-column: 1 / span 2;
+    grid-row: 2/span 2;
+    height: auto;
+    margin: 0px;
+}
+
   html, body{
     margin: 0%;
  }
@@ -159,16 +165,24 @@
     font-variant: small-caps;
     font-size: x-large;
  }
- 
- @keyframes pulse{
-   0%,100%{
-       background-color:  rgb(213, 243, 254);
-   }
-   50%{
-       background-color:  rgb(213, 243, 254);
-   }
- 
- }
+ .Add {
+  background-color:  #f4b7c7;
+  font-size: 25px;
+  font-family: fantasy;
+  font-weight: normal;
+  font-variant: small-caps;
+  font-stretch: semi-expanded;    padding: 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  border-radius: 50%;
+  animation: pulse 4s infinite ;
+}
+
+.Add:hover {
+  opacity: 1;
+}
 
  body {background-color: rgb(213, 243, 254);}
 
