--- a/css/connect.css
+++ b/css/connect.css
@@ -1,10 +1,9 @@
-
 .grid-container2{
     display: grid;
-    grid-template-columns: 300px auto auto;
-    grid-template-rows: 450px 100px;
-    grid-gap: 40px;
-    padding: 25px;
+    grid-template-columns: 1250px auto;
+    grid-template-rows: 450px 200px;
+    grid-gap: 10px;
+    padding: 50px;
 }
 
 .text{
